# report-cli

./: README.md  main.py  pyproject.toml
src/report_cli/: data_loader.py  main.py  models.py
src/report_cli/reports/: __init__.py  base.py  performance.py  summary.py
tests/: conftest.py  test_data_loader.py  test_main.py  test_reports.py
