[project]
name = "report_cli"
version = "0.1.0"
description = "Developer performance reports"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "tabulate"
]

[project.scripts]
report-cli = "report_cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/report_cli"]